# color_icp

./: .gitignore  CMakeLists.txt  README.md
config/: params.yaml
include/color_icp/: helper.h  remove_nan.h
scripts/: colored_icp.py
src/: color_icp.cpp  optimization.cpp  yaml.cpp
